added super client section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,32 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut pariatur hic architecto?</p>
             </div>
         </section>
+
+        <!-- super client section -->
+        <section class="my-24 flex flex-col lg:flext-row gap-12 rounded-xl bg-gradient-to-r from-orange-600 to-rose-600 px-16 py-24 ">
+            <div class="space-y-5">
+                <h2 class="text-5xl font-extrabold text-white">
+                    Meet Our <br> Super Clients
+                </h2>
+                <p class="text-white">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum error dolores maiores ipsa alias amet illum ullam reprehenderit iusto voluptates?
+                </p>
+                <button class="btn btn-primary">Show</button>
+            </div>
+            <div>
+                <!-- review -->
+                <div class="p-10 relative rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5" src="./images/client.png" alt="">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perferendis maiores quod quaerat totam.
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                </div>
+            </div>
+        </section>
     </main>
+
     <footer>
 
     </footer>
