--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 magnam tempore.</p>
 
             <!-- featured tea card container -->
-            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            <div class="grid lg:p-8 p-4 gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
 
                 <!-- first card -->
                 <div class="card  p-8 bg-gradient-to-r from-yellow-400 to-blue-300 shadow-xl">
@@ -143,25 +143,122 @@
         </section>
 
         <!-- super client section -->
-        <section class="my-24 flex flex-col lg:flext-row gap-12 rounded-xl bg-gradient-to-r from-orange-600 to-rose-600 px-16 py-24 ">
-            <div class="space-y-5">
-                <h2 class="text-5xl font-extrabold text-white">
-                    Meet Our <br> Super Clients
-                </h2>
-                <p class="text-white">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum error dolores maiores ipsa alias amet illum ullam reprehenderit iusto voluptates?
-                </p>
-                <button class="btn btn-primary">Show</button>
+        <section
+            class="my-24  flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-orange-600 to-rose-600 px-16 py-24 ">
+            <div class="flex items-center lg:pr-28">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">
+                        Meet Our <br> Super Clients
+                    </h2>
+                    <p class="text-white">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Ipsum error dolores maiores ipsa
+                        alias amet
+                        illum ullam reprehenderit iusto voluptates?
+                    </p>
+                    <button class="btn btn-primary">Show All</button>
+                </div>
             </div>
-            <div>
-                <!-- review -->
-                <div class="p-10 relative rounded-lg bg-white">
-                    <img class="absolute -top-5 -left-5" src="./images/client.png" alt="">
+
+            <!-- review section -->
+            <div class="relative">
+                <!-- next review -->
+                <div class="p-10 relative mb-16 opacity-40 rounded-lg bg-white z-10">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perferendis maiores quod quaerat totam.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perferendis maiores quod quaerat
+                        totam.
                     </p>
                     <h4 class="font-bold mt-5">Ilham Yuda</h4>
                     <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="/images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- current review -->
+                <div class="p-10 top-40 lg:-left-40 lg:w-[430px] absolute rounded-lg bg-white z-20">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perferendis maiores quod quaerat
+                        totam.
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="/images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- previous review -->
+                <div class="p-10 relative opacity-40 rounded-lg bg-white z-10">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perferendis maiores quod quaerat
+                        totam.
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="/images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+        <!-- News & events section -->
+        <section>
+            <div class="pb-8">
+                <h2 class="text-3xl font-extrabold flex justify-center items-center pb-8">News & Events</h2>
+                <p class="flex justify-center items-center text-center">Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. <br> Enim ab ducimus nobis, quo explicabo rem nisi quas? Dignissimos, quas
+                    quisquam.</p>
+            </div>
+
+            <div class="flex lg:flex-row sm:flex-col justify-center gap-6">
+                <!-- news card 1 -->
+                <div>
+                    <div class="card card-compact w-96 bg-base-100 shadow-xl">
+                        <figure><img src="/images/news-1.png" alt="Tea" /></figure>
+                        <div class="card-body">
+                            <p>Jan 2nd, 2024</p>
+                            <h2 class="card-title">Collecting 8 points for discount</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <a class="hover:text-red-600" href="">
+                                <p class="font-semibold">Learn More</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- news card 2 -->
+                <div>
+                    <div class="card card-compact w-96 bg-base-100 shadow-xl">
+                        <figure><img src="/images/news-2.png" alt="Tea" /></figure>
+                        <div class="card-body">
+                            <p>Jan 2nd, 2024</p>
+                            <h2 class="card-title">Collecting 8 points for discount</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <a class="hover:text-red-600" href="">
+                                <p class="font-semibold">Learn More</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- news card 3 -->
+                <div>
+                    <div class="card card-compact w-96 bg-base-100 shadow-xl">
+                        <figure><img src="/images/news-3.png" alt="Tea" /></figure>
+                        <div class="card-body">
+                            <p>Jan 2nd, 2024</p>
+                            <h2 class="card-title">Collecting 8 points for discount</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <a class="hover:text-red-600" href="">
+                                <p class="font-semibold">Learn More</p>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
