--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
 <body class="font-manrope">
     <header class="container mx-auto">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="">
+            <div class="  px-8 flex justify-between flex-col lg:flex-row">
 
-                <div>
+                <div class="mt-10">
                     <h1 class="text-7xl font-extrabold">Let's have <br> a cup of tea...</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
                     <button class="btn btn-primary">Explore More</button>
                 </div>
-                <div>
+                <div class="mt-10">
                     <img src="/images/banner.png" class="max-w-sm" />
                     <!-- ratings badge -->
                     <div class=" -mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
@@ -118,7 +118,7 @@
             </div>
         </section>
         <!-- great tea fresh tea section -->
-        <section class="my-24 gap-12 flex flex-col lg:flex-row">
+        <section class=" px-8 my-24 gap-12 flex flex-col lg:flex-row">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
                 <div class="rounded-xl h-36 bg-gradient-to-bl from-cyan-100 to-orange-100"></div>
                 <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
@@ -143,8 +143,7 @@
         </section>
 
         <!-- super client section -->
-        <section
-            class="my-24  flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-orange-600 to-rose-600 px-16 py-24 ">
+        <section class="mx-8  flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-orange-600 to-rose-600 px-8 py-24 ">
             <div class="flex items-center lg:pr-28">
                 <div class="space-y-5">
                     <h2 class="text-5xl font-extrabold text-white">
@@ -264,8 +263,52 @@
         </section>
     </main>
 
-    <footer>
-
+    <footer class="px-48 py-10 bg-base-200 text-base-content">
+        <div class="flex justify-between my-10">
+            <img src="/images/cup.png" alt="">
+            <p>
+                <span>Ready to get started?</span>
+                <button class="btn btn-primary">Get Started</button>
+            </p>
+        </div>
+        <div class="footer">
+            <nav>
+                <header class="footer-title">Services</header>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Legal</header>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <header class="footer-title">Newsletter</header>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="username@site.com"
+                            class=" py-4 bg-transparent border-b-2 border-black outline-none" />
+                        <button class="btn btn-primary join-item rounded-full"><i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="mt-4 text-center">
+            <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </div>
     </footer>
 </body>
 
